<resources>
    <string name="app_name">FakeUser</string>
    <string name="save_profile">Save</string>
    <string name="userProfileFullNameExample">Evgeny Petrashko</string>
    <string name="userDateBirthExample">06.10.2000</string>
    <string name="userProfileAdditionalInfoTitle">Additional Info</string>
    <string name="userProfileAdditionalInfoPhoneTitle">Phone:</string>
    <string name="userProfileAdditionalInfoPhoneExample">89003241851</string>
    <string name="userProfileAdditionalInfoLocationTitle">Location:</string>
    <string name="userProfileAdditionalInfoLocationExample">st. Nazli, Kazan city, Russia</string>
    <string name="userProfileAdditionalInfoCoordinatesTitle">Coordinates:</string>
    <string name="userProfileAdditionalInfoCoordinatesExample">13.4614, -158.1958</string>
    <string name="saved_users_menu_title">Saved Users</string>
</resources>