<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_activity_menu"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityToolbar">

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/profileFullName"
            style="@style/userFullNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userProfileFullNameExample" />

        <TextView
            android:id="@+id/profileDateBirth"
            style="@style/userDateBirthStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userDateBirthExample" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/userProfileAdditionalInfoTitle"
                android:textSize="24sp"
                android:textStyle="italic|bold" />

            <TextView
                style="@style/additionalInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userProfileAdditionalInfoPhoneTitle" />

            <TextView
                android:id="@+id/profilePhone"
                style="@style/additionalInfoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userProfileAdditionalInfoPhoneExample" />

            <TextView
                style="@style/additionalInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userProfileAdditionalInfoLocationTitle" />

            <TextView
                android:id="@+id/profileLocation"
                style="@style/additionalInfoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userProfileAdditionalInfoLocationExample" />

            <TextView
                style="@style/additionalInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userProfileAdditionalInfoCoordinatesTitle" />

            <TextView
                android:id="@+id/profileCoordinates"
                style="@style/additionalInfoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userProfileAdditionalInfoCoordinatesExample" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/profileCallBtn"
                    style="@style/additionalInfoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/call_btn"
                    android:src="@drawable/icon_call_white_24" />

                <ImageButton
                    android:id="@+id/profileMapBtn"
                    style="@style/additionalInfoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/map_btn"
                    android:src="@drawable/icon_map_white_24" />


            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveProfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePlaceholder" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/refreshProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/icon_refresh_white_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>